--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,4 +1,6 @@
 #DEV enviroment
+server.port=8080
+
 app.message=This is the property file fo the ${spring.application.name} specific to PROD Enviroment
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
